Changelog
=========

1.7.4 - unreleased
------------------

- Disable zimbra-mail-portlet-view from theme. Fixes History.txt.
  [Cesar Gonzalez]

- Fixes license and adds AUTHORS.txt.
  [Jose Dinuncio]

- Changes in users portled: changed a image sizes, and added a tooltip
  with user details [8046].
  [Marcin Staniszczak]

- Fixes strange icons in list view, standard view and search result list [8349].
  [Cesar Gonzalez]

- Fixes behaviour of the button *>* that makes the portlet wider.
  [Cesar Gonzalez]

- Adds custom event handler for portlet deferred loading complete event then
  attach portlets buttons.
  [Cesar Gonzalez]

- Removes deferred portlet view.
  [Jose Dinuncio]

- Update site header coding [8509].
  [Marcin Staniszczak]


1.7.4 - September 12, 2013
--------------------------

- Items in navigation portlet should be sorted alphabetically [8047].
  [Marcin Staniszczak]

- Adds root node to Create Wizard tree [8102].
  [Jose Dinuncio]

- Adds multiple files upload into Create New Wizard [6229].
  [Marcin Staniszczak]


1.7.3 - June 14, 2013
---------------------

- Adds mail server property for Dashlet Portlet [7651].
  [Jose Dinuncio]

- Add querywidget to theme layers. This is requried by new style collections.
  [Vitaliy Podoba]


1.7.2 - May 29, 2013
--------------------

- Fixes bug in lazy portlets load [7483].
  [Jose Dinuncio]

- Fixes bug in zimbra viewlet after upgrade to Zimbra 8.
  [Jose Dinuncio]

- Improves styles in wizard dynatree [7379].
  [Jose Dinuncio]

- Add Following Functionality to user profile pages.
  [Vitaliy Podoba]

- slimScroll attach to deferred portlets, spinner animation centering, template adjust.
  [Cesar Gonzalez]

- Fixes translation of Display menu and global bar.
  [Jose Dinuncio]

- Sets pointer cursor and font style for selected item in tree.
  [Cesar Gonzalez]

- Adds new parameter type_ to ajax call for populate tree of wizard.
  [Cesar Gonzalez]

- Fixes bug "Disallowed subobject type" in wizard.