@@ -1182,16 +1182,6 @@ function initFollowingControls() {
 
 }
 
-function initFollowingControls() {
-  $("#vnc-languageselector").selectbox({
-    effect: "fade",
-    onChange: function (val, inst) {
-      console.log(val);
-      window.location = val;
-    }
-  });
-}
-
 jq(function() {
   attachNewTicketAction();
   attachHeaderViewletCloseOpen();
@@ -1209,5 +1199,4 @@ jq(function() {
   setHandlersWizard();
   addDocumentContentShadows();
   fixGeneralUI();
-  initFollowingControls();
 });
