@@ -1,116 +1,0 @@
-@CHARSET "UTF-8";
-.sbHolder{
-/*	font-family: Arial, sans-serif;
-	font-size: 12px;
-	font-weight: normal;*/
-	height: 30px;
-	position: relative;
-	width: 147px;
-}
-.sbHolder:focus .sbSelector{
-	
-}
-.sbSelector{
-	display: block;
-	height: 30px;
-	left: 0;
-	line-height: 30px;
-	outline: none;
-	overflow: hidden;
-	position: absolute;
-	top: 0;
-	width: 140px;
-}
-.sbSelector:link, .sbSelector:visited, .sbSelector:hover{
-	/*color: #EBB52D;*/
-	outline: none;
-	text-decoration: none;
-}
-.userPreferencesBody .sbHolder a:before {
-	background: none;
-	content: "";
-	margin-right: 0px;
-	vertical-align: text-top;
-}
-.userPreferencesBody a.sbToggle{
-	background: url(../../++resource++vnccollab.theme.images/select-icons.png) 0 -116px no-repeat;
-	display: block;
-	height: 30px;
-	outline: none;
-	position: absolute;
-	right: 0;
-	top: 0;
-	width: 30px;
-}
-.sbToggle:hover{
-	background: url(../../++resource++vnccollab.theme.images/select-icons.png) 0 -167px no-repeat;
-}
-.sbToggleOpen{
-	background: url(../../++resource++vnccollab.theme.images/select-icons.png) 0 -16px no-repeat;
-}
-.sbToggleOpen:hover{
-	background: url(../../++resource++vnccollab.theme.images/select-icons.png) 0 -66px no-repeat;
-}
-.sbHolderDisabled{
-	background-color: #3C3C3C;
-	border: solid 1px #515151;
-}
-.sbHolderDisabled .sbHolder{
-	
-}
-.sbHolderDisabled .sbToggle{
-	
-}
-.sbOptions{
-	background-color: #dee3e8;
-	border: solid 1px #738ea2;
-	list-style: none;
-	left: -1px;
-	margin: 0;
-	padding: 0;
-	position: absolute;
-	top: 30px;
-	width: 149px;
-	z-index: 1;
-	overflow-y: auto;
-}
-.sbOptions li{
-	/*padding: 0 7px;*/
-}
-.sbOptions a{
-	border-bottom: dotted 1px #515151;
-	display: block;
-	outline: none;
-	padding: 7px 0 7px 3px;
-}
-.sbOptions a:link, .sbOptions a:visited{
-	color: rgba(1, 42, 67, 0.6);;
-	text-decoration: none;
-}
-.sbOptions a:hover,
-.sbOptions a:focus,
-.sbOptions a.sbFocus{
-	color: rgba(1, 42, 67, 0.6);
-}
-.sbOptions a:hover {
-	text-decoration:underline;
-}
-.sbOptions li.last a{
-	border-bottom: none;
-}
-.sbOptions .sbDisabled{
-	border-bottom: dotted 1px #515151;
-	color: #999;
-	display: block;
-	padding: 7px 0 7px 3px;
-}
-.sbOptions .sbGroup{
-	border-bottom: dotted 1px #515151;
-	color: #EBB52D;
-	display: block;
-	font-weight: bold;
-	padding: 7px 0 7px 3px;
-}
-.sbOptions .sbSub{
-	padding-left: 17px;
-}
