@@ -46,6 +46,4 @@
               enabled="True" />
   <javascript id="++resource++vnccollab.theme.js/bubbleinfo.js"
               enabled="True" />
-  <javascript id="++resource++vnccollab.theme.js/jquery.selectbox.js"
-              enabled="True" />
 </object>
